--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -15,9 +15,14 @@ url = "/gallery"
 weight = 4
 
 [[main]]
+name = "FAQ"
+url = "/faq/"
+weight = 5
+
+[[main]]
 name = "Kontakt"
 url = "/contact"
-weight = 5
+weight = 6
 
 # footer menu left
 [[footer_left]]
@@ -31,6 +36,11 @@ url = "/gallery"
 weight = 3
 
 [[footer_left]]
+name = "FAQ"
+url = "/faq/"
+weight = 4
+
+[[footer_left]]
 name = "Kontakt"
 url = "/contact"
-weight = 4
+weight = 5
