added google analytics tracking id

--- a/hugo.toml
+++ b/hugo.toml
@@ -15,7 +15,7 @@ hasCJKLanguage = true # If hasCJKLanguage true, auto-detect Chinese/Japanese/Kor
 ########################### Services #############################
 [services]
 [services.googleAnalytics]
-ID = '##########' # see https://gohugo.io/templates/internal/#configure-google-analytics
+ID = 'G-3900HTHGGK' # see https://gohugo.io/templates/internal/#configure-google-analytics
 
 
 ############################# Modules ############################
